[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/crawlies.png" type="Texture" id=1]
[ext_resource path="res://Enemy2.gd" type="Script" id=2]
[ext_resource path="res://sounds/beyond1.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "idle"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 13 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.2285, 13.6092 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 34.6667, 13.3333 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 34.6666, 13.3333 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13.3333, 10.6667 )

[node name="Enemy2" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
collision_layer = 2
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 4
hframes = 4
frame = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.420448 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -50.6667, 0 )
shape = SubResource( 3 )

[node name="Area2D2" type="Area2D" parent="."]
visible = false
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 50.6667, 0 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[node name="KillBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillBox"]
shape = SubResource( 5 )

[node name="chasemusic2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 0.85
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_Area2D2_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
